cnpg-operator/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - pgadmin.g2dev.net
  rules:
  - host: pgadmin.g2dev.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin
            port:
              number: 80
